--- a/index.html
+++ b/index.html
@@ -291,7 +291,8 @@
         <p class="merriweather">Etudiant en polytechnique d'Antananarivo, bénéficiaire du prestigieux programme SESAME.
          Passionné par la technologie, l'informatique et le Machine Learning, je suis un esprit curieux et
           motivé, déterminé à repousser les limites de l'innovation technologique pour créer un avenir
-           meilleur.</p>
+           meilleur. En tant que responsable de gestion des bases de données chez GreenGuardian, je suis profondément 
+          engagé dans l'application de toutes mes compétences pour des solutions de l'agriculture durables.</p>
         
       </div>
       <div class="propos-content">
@@ -312,9 +313,13 @@
         </div>
         <h3>NARINDRANJANAHARY Emmanuela</h3>
         <h1>And I'm a <span class="multiple-text3"></span> </h1>
-        <p class="merriweather">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, totam! Nemo ullam
-          quas quod aperiam expedita veritatis?
-          Repudiandae unde sunt accusam.</p>
+        <p class="merriweather">Je suis un étudiant en Génie des Procédés Chimiques et Industriels. 
+          J'ai aussi une spécialisation avancée en Machine Learning, Deep Learning et Intelligence Artificielle. 
+          En tant que responsable de l'IA chez GreenGuardian, je suis profondément engagé dans l'application de l'IA pour
+          des solutions de l'agriculture durables. Mon intérêt pour l'informatique, l'électronique, la robotique et aussi
+          la chimie me guide dans la recherche de solutions innovantes qui allient ces domaines pour créer un impact positif
+          sur notre monde. Mon parcours académique et compétences professionnelles me permet de relever les défis technologiques
+          avec passion et expertise. </p>
     
 
       </div>
