--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
           <img src="images/about.png" alt="">
         </div>
         <h3>NARINDRANJANAHARY Emmanuela</h3>
-        <h1>And I'm a <span class="multiple-text3"></span> </h1>
+        <h1>Je suis un <span class="multiple-text3"></span> </h1>
         <p class="merriweather">Je suis un étudiant en Génie des Procédés Chimiques et Industriels. 
           J'ai aussi une spécialisation avancée en Machine Learning, Deep Learning et Intelligence Artificielle. 
           En tant que responsable de l'IA chez GreenGuardian, je suis profondément engagé dans l'application de l'IA pour
