--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 
       <div class="propos-content">
         <div class="propos-img">
-          <img src="images/Pierrot.png" alt="">
+          <img src="images/Pierrot.jpg" alt="">
         </div>
         <h3> RAFANOMEZANTSOA Pierrot</h3>
         <h1>Je suis un <span class="multiple-text"></span> </h1>
@@ -309,7 +309,7 @@
       </div>
       <div class="propos-content">
         <div class="propos-img">
-          <img src="images/about.png" alt="">
+          <img src="images/Mandresy.jpg" alt="">
         </div>
         <h3>NARINDRANJANAHARY Emmanuela</h3>
         <h1>Je suis un <span class="multiple-text3"></span> </h1>
