--- a/index.html
+++ b/index.html
@@ -289,21 +289,26 @@
         <h3> RAFANOMEZANTSOA Pierrot</h3>
         <h1>Je suis un <span class="multiple-text"></span> </h1>
         <p class="merriweather">Etudiant en polytechnique d'Antananarivo, bénéficiaire du prestigieux programme SESAME.
-         Passionné par la technologie, l'informatique et le Machine Learning, je suis un esprit curieux et
-          motivé, déterminé à repousser les limites de l'innovation technologique pour créer un avenir
-           meilleur. En tant que responsable de gestion des bases de données chez GreenGuardian, je suis profondément 
-          engagé dans l'application de toutes mes compétences pour des solutions de l'agriculture durables.</p>
+          Passionné par la technologie, l'informatique et le Machine Learning, je suis un esprit curieux et
+           motivé, déterminé à repousser les limites de l'innovation technologique pour créer un avenir
+            meilleur. En tant que responsable de gestion des bases de données chez GreenGuardian, je suis profondément 
+           engagé dans l'application de toutes mes compétences pour des solutions de l'agriculture durables.</p>
         
       </div>
       <div class="propos-content">
         <div class="propos-img">
-          <img src="images/about.png" alt="">
+          <img src="images/Rambelo.jpg" alt="">
         </div>
         <h3>RAMBELOSON Tiavina</h3>
-        <h1>And I'm a <span class="multiple-text4"></span> </h1>
-        <p class="merriweather">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, totam! Nemo ullam
-          quas quod aperiam expedita veritatis?
-          Repudiandae unde sunt accusam.</p>
+        <h1>Je suis un <span class="multiple-text4"></span> </h1>
+        <p class="merriweather"> Un passionné de Systèmes Embarqués, Robotique, IoT, et Programmation, et 
+          je travaille en tant que roboticien et responsable des capteurs au sein de l'équipe GreenGuardian.
+         Mon rôle clé au sein de l'équipe est de concevoir et de superviser les capteurs cruciaux qui 
+         permettent à notre technologie de prendre des décisions intelligentes. Mon expertise englobe la 
+         création de systèmes embarqués performants, la conception de robots innovants, l'exploitation de 
+         l'IoT pour des solutions pratiques, et une solide compétence en programmation. Mon objectif est 
+         de fusionner ces domaines pour créer des solutions technologiques innovantes ayant un impact
+          positif sur notre monde.</p>
        
 
       </div>
@@ -325,24 +330,27 @@
       </div>
       <div class="propos-content">
         <div class="propos-img">
-          <img src="images/about.png" alt="">
+          <img src="images/Mamitina.jpg" alt="">
         </div>
         <h3>RANDRIAMANARIVO Mamitiana</h3>
         <h1>And I'm a <span class="multiple-text2"></span> </h1>
-        <p class="merriweather">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, totam! Nemo ullam
-          quas quod aperiam expedita veritatis?
-          Repudiandae unde sunt accusam.</p>
+        <p class="merriweather">Passionné par la Biotechnologie, je suis un parcours d'Ingénieur Industriel 
+          à l'Ecole Polytechnique. Cela m'a permis de scruter l'horizon du Control Engineering, surtout les
+           systèmes asservis et automatisés. Pour creuser encore plus profond et m'épanouir dans ce domaine,
+            l'ICT Academy de chez Huawei m'a permis de suivre une spécialisation en Intelligence Artificielle et
+             Data Science. Pour faire simple, avec l'équipe de GreenGuardian, nous essaions de combiner Robotique, 
+             Informatique et IA pour apporter un push significatif dans le domaine de l'AGRITECH durable.</p>
 
       </div>
       <div class="propos-content">
         <div class="propos-img">
-          <img src="images/about.png" alt="">
+          <img src="images/Laures.jpg" alt="">
         </div>
         <h3>MAHATOKY Jean Laures</h3>
-        <h1>And I'm a <span class="multiple-text1"></span> </h1>
-        <p class="merriweather">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, totam! Nemo ullam
-          quas quod aperiam expedita veritatis?
-          Repudiandae unde sunt accusam.</p>
+        <h1>Je suis un <span class="multiple-text1"></span> </h1>
+        <p class="merriweather">Etudiant en double diplomation, agriculture à l'ESSA d'Antananarivo et
+           Sciences du sol à l'UCLouvain et bénéficiaire du programme SESAME.
+          Amoureux de l'Agriculture, environnement et gestion durable des ressources naturelles.</p>
 
       </div>
     </div>
